--- a/resources/public/css/essentials.css
+++ b/resources/public/css/essentials.css
@@ -262,7 +262,7 @@
     position: absolute;
     right: 10px;
     top: 3px;
-    background-image: url(images/down-arrow.jpg);
+    background-image: url(/images/down-arrow.jpg);
     width:12px;
     height:8px;
     background-position: center;
@@ -271,7 +271,7 @@
 }
 
 .product-type-check.has-filter-submenu h4.open:before {
-    background-image: url(images/up-arrow.jpg);
+    background-image: url(/images/up-arrow.jpg);
      width:12px;
     height:8px;
 }
@@ -280,7 +280,7 @@
     position: absolute;
     right: 10px;
     top: 3px;
-    background-image: url(images/down-arrow.jpg);
+    background-image: url(/images/down-arrow.jpg);
     width:12px;
     height:8px;
     background-position: center;
@@ -520,7 +520,7 @@
     position: absolute;
     left: 0;
     top: 5px;
-    background-image: url(images/bullet.png);
+    background-image: url(/images/bullet.png);
     background-repeat: no-repeat;
     background-position: left center;
     border-radius: 50%;
@@ -622,7 +622,7 @@ ul.upholstery-types-list {
     padding: 2px 10px;
     display: inline-block;
     box-sizing: border-box;
-    background-image: url(images/back-to-arrow.png);
+    background-image: url(/images/back-to-arrow.png);
     background-repeat: no-repeat;
     background-position: 15px 8px;
     padding-left: 30px;
@@ -632,7 +632,7 @@ ul.upholstery-types-list {
 }
 
 .sub-tab-wrap .upholstery-types-sub-list li a:hover {
-    background-image: url(images/back-to-arrow-whiter.png);
+    background-image: url(/images/back-to-arrow-whiter.png);
     background-color: #f94e35;
     color: #fff;
 }
@@ -711,7 +711,7 @@ ul.upholstery-types-list {
 }
 
 .popup-modal-dismiss {
-    background-image: url(images/essentials-popup-close-icon.png);
+    background-image: url(/images/essentials-popup-close-icon.png);
     background-repeat: no-repeat;
     background-position: center;
     width: 14px;
@@ -753,7 +753,7 @@ ul.upholstery-types-list {
 }
 
 .pop-action-icon {
-    background-image: url(images/three-dot-icon.png);
+    background-image: url(/images/three-dot-icon.png);
     background-repeat: no-repeat;
     background-position: center;
     width: 23px;
@@ -814,7 +814,7 @@ ul.upholstery-types-list {
     width: 35px;
     height: 35px;
     border-radius: 50%;
-    background-image: url(images/swap-arrow-left.png);
+    background-image: url(/images/swap-arrow-left.png);
     background-position: center;
     position: absolute;
     background-repeat: no-repeat;
@@ -829,7 +829,7 @@ ul.upholstery-types-list {
     width: 35px;
     height: 35px;
     border-radius: 50%;
-    background-image: url(images/swap-arrow-right.png);
+    background-image: url(/images/swap-arrow-right.png);
     background-position: center;
     position: absolute;
     background-repeat: no-repeat;
