--- a/resources/public/css/essentials.css
+++ b/resources/public/css/essentials.css
@@ -19,15 +19,12 @@
 }
 
 #essentials_search .left h2 {
-
-
     color: #333333;
     font: 30px 'HelveticaNeueW01-75Bold', Arial, Helvetica, sans-serif;
     margin-bottom: 15px;
 }
 
 #essentials_search .left p {
-
     color: #333333;
     font: 14px 'HelveticaNeueW01-55Roma', Arial, Helvetica, sans-serif;
     line-height: 18px;
@@ -80,8 +77,6 @@
 .lead-time-list-types label {
     font: 14px 'HelveticaNeueW01-55Roma', Arial, Helvetica, sans-serif;
     color: #464646;
-
-
     cursor: pointer;
 }
 
@@ -108,8 +103,6 @@
     transition: all 0.5s;
 }
 
-
-
 .lead-time-list-types.all-lead-type label:before {
     border-color: #777777;
 }
@@ -126,7 +119,6 @@
     background-color: #00adef;
 }
 
-
 .lead-time-list-types.three-week-ship label:before {
     border-color: #fadb32;
 }
@@ -134,7 +126,6 @@
 .lead-time-list-types.three-week-ship input:checked+label:before {
     background-color: #fadb32;
 }
-
 
 .lead-time-list-types.standard-ship label:before {
     border-color: #f2772d;
@@ -174,11 +165,6 @@
     width: 25%;
     margin-bottom: 95px;
 }
-
-
-/*.product-list>li:nth-child(4n+1) {
-    clear: left;
-}*/
 
 .product-list li p {
     clear: left;
@@ -239,8 +225,6 @@
     flex-wrap: wrap;
 }
 
-
-
 .product-type-check h4,
 .product-type-check-list-all li,
 .header-filed label {
@@ -252,10 +236,12 @@
     cursor: pointer;
     text-transform: capitalize;
 }
-.header-filed input{
+
+.header-filed input {
     display: none;
     opacity: 0;
 }
+
 .product-type-check.has-filter-submenu h4:before,
 .product-type-check.has-filter-submenu.disable-filter h4:before {
     content: "";
@@ -263,8 +249,8 @@
     right: 10px;
     top: 3px;
     background-image: url(/images/down-arrow.jpg);
-    width:12px;
-    height:8px;
+    width: 12px;
+    height: 8px;
     background-position: center;
     display: inline-block;
     background-repeat: no-repeat;
@@ -272,17 +258,18 @@
 
 .product-type-check.has-filter-submenu h4.open:before {
     background-image: url(/images/up-arrow.jpg);
-     width:12px;
-    height:8px;
+    width: 12px;
+    height: 8px;
 }
+
 .product-type-check.has-filter-submenu.disable-filter h4:before {
     content: "";
     position: absolute;
     right: 10px;
     top: 3px;
     background-image: url(/images/down-arrow.jpg);
-    width:12px;
-    height:8px;
+    width: 12px;
+    height: 8px;
     background-position: center;
     display: inline-block;
     background-repeat: no-repeat;
@@ -308,7 +295,6 @@
 
 .product-type-check-list li label,
 .product-type-check-list-all li label {
-
     position: relative;
     color: #464646;
     margin: 0;
@@ -347,12 +333,9 @@
 
 .product-type-check-list li input:checked+label:before,
 .product-type-check-list-all li input:checked+label:before {
-
     border-color: #a6a6a6;
     background-color: #636363;
 }
-
-
 
 .product-type-check-list-all li,
 .product-type-check-list-all {
@@ -396,14 +379,16 @@
     display: inline-block;
     width: 100%;
 }
-.essentials-product-img-wrap img{
+
+.essentials-product-img-wrap img {
     max-width: 100%;
 }
 
 .essentials-product-img-detail p {
-    color: #333333;
+    color: #777;
     font-family: 'HelveticaNeueW01-55Roma', Arial, Helvetica, sans-serif;
     font-size: 14px;
+    line-height: 1.7;
 }
 
 .essentials-product-tabs {
@@ -414,13 +399,14 @@
 }
 
 .essentials-modal-content {
-    display: inline-block;
+    display: flex;
     width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .essentials-tab-list {
     display: flex;
-
     border-top: 1px solid #d3d3d3;
 }
 
@@ -428,7 +414,6 @@
     width: 33.33%;
     float: left;
     position: relative;
-
     border-right: 1px solid #d3d3d3;
     background-color: #f7f7f7;
     border-bottom: 1px solid #d3d3d3;
@@ -447,10 +432,8 @@
     text-transform: uppercase;
     color: #333333;
     font-family: 'HelveticaNeueW01-55Medi', Arial, Helvetica, sans-serif;
-
     border-bottom: none;
     padding: 10px 45px 10px 35px;
-
     display: inline-block;
     font-size: 14px;
 }
@@ -468,13 +451,10 @@
     width: 8px;
     height: 8px;
     border-radius: 50%;
-
-
     margin-right: 3px;
     position: absolute;
     left: 15px;
-    
-        top: 50%;
+    top: 50%;
     transform: translateY(-50%);
 }
 
@@ -511,7 +491,6 @@
     font-family: 'HelveticaNeueW01-55Roma', Arial, Helvetica, sans-serif;
     margin-bottom: 10px;
     position: relative;
-    
     padding: 0 15px;
 }
 
@@ -537,7 +516,6 @@
 }
 
 .frame-list {
-  /*  display: inline-block;*/
     width: 100%;
     margin: 0 -8px;
     display: -webkit-box;
@@ -553,12 +531,12 @@
     width: 14%;
     float: left;
     padding: 0 8px;
-     display: -webkit-box;
+    display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-        flex-flow: column;
+    flex-flow: column;
 }
 
 .frame-list li p,
@@ -597,7 +575,6 @@ ul.upholstery-types-list {
     font-size: 12px;
     color: #333333;
     font-family: 'HelveticaNeueW01-75Bold', Arial, Helvetica, sans-serif;
-
     border-radius: 25px;
     background-color: #f5f5f5;
     text-transform: uppercase;
@@ -644,17 +621,15 @@ ul.upholstery-types-list {
 }
 
 .upholstery-tetile-list {
-    
     width: 100%;
-
     margin: 25px -8px 0;
-        display: -webkit-box;
+    display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
     flex-wrap: wrap;
-    align-items: end;
+    align-items: start;
 }
 
 .upholstery-tab-content {
@@ -666,19 +641,18 @@ ul.upholstery-types-list {
 }
 
 .upholstery-tetile-list li {
-   
     float: left;
     width: 14%;
     margin-bottom: 35px;
     padding: 0 8px;
-    
-     display: -webkit-box;
+    display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-        flex-flow: column;
+    flex-flow: column;
 }
+
 .swatch-div {
     position: relative;
     display: inline-block;
@@ -686,22 +660,24 @@ ul.upholstery-types-list {
     height: 100%;
     box-sizing: border-box;
 }
-.swatch-div:after{
+
+.swatch-div:after {
     content: '';
     position: absolute;
     width: calc(100% - 4px);
-    height:calc(100% - 4px);
-    border:2px solid #f45629;
+    height: calc(100% - 4px);
+    border: 2px solid #f45629;
     top: 0;
     left: 0;
     opacity: 0;
-
 }
+
 .swatch-div img {
     width: 100% !important;
     height: 100% !important;
 }
-.swatch-div:hover:after{
+
+.swatch-div:hover:after {
     opacity: 1;
 }
 
@@ -726,27 +702,13 @@ ul.upholstery-types-list {
     background-color: #f8654d !important;
 }
 
-
-/*.essentials-modal-content .mCSB_scrollTools .mCSB_dragger {
-    
-    height: 100% !important;
-}
-*/
-
 .essentials-modal-content .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
     width: 7px;
 }
 
-
-
 .essentials-modal-content .mCSB_scrollTools .mCSB_draggerRail {
     background-color: transparent;
 }
-
-
-/*.essentials-modal-content .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
-    opacity: 0;
-}*/
 
 .essentials-modal-content:hover .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
     opacity: 1;
@@ -845,15 +807,10 @@ ul.upholstery-types-list {
 
 .product-type-check.disable-filter h4,
 .product-type-check.disable-filter label,
-.product-type-check-list li input.disable-filter + label {
+.product-type-check-list li input.disable-filter+label {
     color: #ccc;
     pointer-events: none;
 }
-
-
-/*.product-list.list-filter>li:nth-child(4n+1) {
-    clear: none;
-}*/
 
 .tab-main.hide {
     display: none;
@@ -881,31 +838,19 @@ li.selected.has-sub-tab {
     width: auto;
     max-width: 100%;
 }
-/*.mfp-inline-holder .mfp-content
-{
-    height: auto;
-}*/
 
-/*.hide-nav .owl-controls {
-    display: none;
-}*/
-h3.titleGreyborder.text-center.no-result{
+h3.titleGreyborder.text-center.no-result {
     text-align: center;
 }
-/*.seating-page .mfp-wrap{
-    overflow:auto !important;
-    height: 100vh !important;
-}
-.seating-page .mfp-container{
-    height: 100vh !important;
-}
-*/
-.essentials-modal-wrap .owl-carousel .owl-stage-outer{
+
+.essentials-modal-wrap .owl-carousel .owl-stage-outer {
     height: auto !important;
 }
+
 .filter-view-head {
     position: relative;
 }
+
 p.reset-filter-link {
     color: #f04e23;
     text-transform: uppercase;
@@ -916,17 +861,20 @@ p.reset-filter-link {
     font-size: 11px;
     display: none;
 }
-ul.product-type-check-list{
+
+ul.product-type-check-list {
     padding-right: 10px;
 }
+
 .product-list li p sup {
-  position: relative;
+    position: relative;
     top: -3px;
     color: #000;
     font-size: 11px;
     padding-right: 5px;
     right: -2px;
 }
+
 .right-product-content {
     position: relative;
 }
@@ -962,30 +910,60 @@ ul.product-type-check-list{
 .product-list>li:nth-child(even) {
     transition-duration: 0.7s;
 }
-h3.titleGreyborder.inactive + ul.product-list{
-    border-bottom:none;
+
+h3.titleGreyborder.inactive+ul.product-list {
+    border-bottom: none;
 }
-.two-essentials-tab-list li{
+
+.two-essentials-tab-list li {
     width: 50%;
 }
-.gray-tag{
-    color:#333 !important;
+
+.gray-tag {
+    color: #333 !important;
 }
-.gray-tag:hover{
+
+.gray-tag:hover {
     color: #f04e23 !important;
 }
-.no-result{
+
+.no-result,
+.mobile-visible {
     display: none;
 }
+
+.print-show {
+    display: none;
+}
+
+.essentials-product-img-detail {
+    overflow: auto;
+}
+
+.essentials-product-img-detail.mCustomScrollbar h2,
+.essentials-product-img-detail.mCustomScrollbar p {
+    padding-right: 20px;
+}
+
+.essentials-modal-content .essentials-product-img-detail .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
+    background-color: #777 !important;
+    width: 4px;
+}
+
+.essentials-product-img-detail .mCSB_dragger_bar {
+    opacity: 0;
+}
+
+.essentials-product-img-detail:hover .mCSB_dragger_bar {
+    opacity: 1;
+}
+
 @media screen and (max-width: 992px) {}
 
 @media screen and (max-width: 991px) {
     .product-list>li:nth-child(3n+1) {
         clear: left;
     }
-    /* .product-list>li:nth-child(4n+1) {
-        clear: none;
-    }*/
     .product-list>li {
         width: 33.33%;
         margin-bottom: 45px;
@@ -994,7 +972,6 @@ h3.titleGreyborder.inactive + ul.product-list{
         margin-bottom: 45px;
     }
     .essentials-modal-wrap {
-        /*padding: 40px 30px;*/
         margin-top: 85px;
     }
     .essentials-tab-list li a {
@@ -1018,9 +995,6 @@ h3.titleGreyborder.inactive + ul.product-list{
     .product-list>li:nth-child(3n+1) {
         clear: none;
     }
-    /*.product-list>li:nth-child(4n+1) {
-        clear: none;
-    }*/
     .product-list>li:nth-child(2n+1) {
         clear: left;
     }
@@ -1039,7 +1013,6 @@ h3.titleGreyborder.inactive + ul.product-list{
     .essentials-product-tabs {
         width: 100%;
     }
-
     .essentials-product-img-wrap {
         float: left;
         max-width: 260px;
@@ -1052,27 +1025,19 @@ h3.titleGreyborder.inactive + ul.product-list{
         max-height: 100%;
         overflow: auto;
     }
-    /*.essentials-modal-content {
-        height: 80vh;
-        overflow: hidden;
-    }*/
     .essentials-tab-list {
         display: none;
     }
     .tab-select-option {
- 
-
-
-           width: 100%;
-    display: block;
-    padding: 10px 5px;
-    line-height: 40px;
-    border: 1px solid #ccc;
-    font-size: 14px;
-    font-weight: normal;
-    color: #777;
-    font-family: 'HelveticaNeueW01-65Medi', Arial, Helvetica, sans-serif;
-   
+        width: 100%;
+        display: block;
+        padding: 10px 5px;
+        line-height: 40px;
+        border: 1px solid #ccc;
+        font-size: 14px;
+        font-weight: normal;
+        color: #777;
+        font-family: 'HelveticaNeueW01-65Medi', Arial, Helvetica, sans-serif;
     }
     .essentials-product-tabs {
         border: none;
@@ -1080,16 +1045,18 @@ h3.titleGreyborder.inactive + ul.product-list{
     .popup-tab-wrap {
         border: 1px solid #ccc;
     }
-    .popup-tab-wrap .mCSB_draggerContainer{
+    .popup-tab-wrap .mCSB_draggerContainer {
         display: none;
     }
-    .seating-page .mfp-wrap{
-    overflow:auto !important;
-    
-}
+    .seating-page .mfp-wrap {
+        overflow: auto !important;
+    }
 }
 
 @media screen and (max-width:640px) {
+    .mobile-visible {
+        display: block;
+    }
     .left-filter-col {
         width: 100%;
         max-width: 175px;
@@ -1129,15 +1096,14 @@ h3.titleGreyborder.inactive + ul.product-list{
         transform: translateY(-7%);
     }
     .essentials-modal-wrap {
-        padding:40px 0px 15px;
+        padding: 40px 0px 15px;
     }
     .essentials-modal-wrap .owl-next {
-        right:15px;
+        right: 15px;
     }
     .essentials-modal-wrap .owl-prev {
         left: 15px;
     }
-
     .upholstery-tetile-list,
     .frame-list {
         display: flex;
@@ -1166,7 +1132,6 @@ h3.titleGreyborder.inactive + ul.product-list{
         z-index: 10000;
         top: 0px;
         border-left: 4px solid #f0ebe5;
-        /* -webkit-transition: all ease-in-out 0.4s; */
         -moz-transition: all ease-in-out 0.4s;
         transition: all ease-in-out 0.4s;
         -webkit-box-sizing: border-box;
@@ -1206,35 +1171,233 @@ h3.titleGreyborder.inactive + ul.product-list{
         margin-top: 0;
         padding-bottom: 15px;
     }
-    .essentials-product-img-wrap img{
+    .essentials-product-img-wrap img {
         float: none;
-        margin:0 auto;
+        margin: 0 auto;
     }
-    .options-list{
+    .options-list {
         width: 100%;
     }
-    .product-col-image{
+    .product-col-image {
         width: 100%;
     }
 }
 
 @media screen and (max-width: 480px) {
-    /*.product-list>li {
-        width: 100%;
-        margin: 0 auto 35px;
-        clear: none;
-        text-align: center;
-        max-width: 250px;
-        float: none;
-    }*/
     .lead-time-status {
         text-align: center;
     }
     .lead-time-status li {
         float: none;
     }
-
     .product-col-image {
         margin-bottom: 10px;
+    }
+}
+
+@media print {
+    header#outer_header,
+    section.body_container,
+    .pop-action-icon,
+    .popup-modal-dismiss,
+    .popup-action-list,
+    .popup-action-list-view,
+    .owl-item,
+    .swatch-div,
+    .sub-tab-wrap,
+    ul.upholstery-types-list,
+    .upholstery-list-wrap label {
+        display: none;
+    }
+    .owl-item.active {
+        display: block;
+    }
+    .essentials-product-img {
+        max-width: 100%;
+        float: none;
+    }
+    .essentials-product-tabs {
+        width: 100%;
+        float: none;
+        float: none;
+        border: none;
+        box-shadow: none;
+    }
+    .essentials-tab-list li {
+        width: 100%;
+        background-color: #fff;
+        float: none;
+        display: block;
+        border: none;
+    }
+    .essentials-modal-wrap {
+        max-width: 100%;
+        padding: 0;
+        margin-top: 0px;
+        box-shadow: none;
+        border: none;
+    }
+    .essentials-tab-list,
+    .upholstery-tetile-lis {
+        display: inline-block;
+        width: 100%;
+    }
+    .frame-list {
+        display: inline-block !important;
+    }
+    .essentials-tab-list {
+        display: none;
+    }
+    .frame-list li,
+    .upholstery-tetile-list li {
+        display: inline-block !important;
+        width: 100px !important;
+    }
+    .essentials-product-img-detail p {
+        word-wrap: break-word !important;
+        white-space: normal !important;
+    }
+    .popup-tab-wrap,
+    .mCustomScrollBox {
+        max-height: 100% !important;
+    }
+    .owl-carousel .owl-item {
+        width: 100% !important;
+    }
+    .popup-tab-content {
+        display: block !important;
+    }
+    .popup-tab-wrap,
+    .mCustomScrollBox {
+        max-height: 100% !important;
+        overflow: auto !important;
+        padding: 0;
+    }
+    .essentials-tab-list li a {
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    .options-list-wrap {
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    .frame-finish-wrap {
+        padding-bottom: 5px;
+        margin-bottom: 5px;
+    }
+    p {
+        display: block !important;
+    }
+    img {
+        page-break-inside: avoid !important;
+        display: inline-block !important;
+    }
+    .essentials-product-img-wrap,
+    .popup-tab-content {
+        display: block !important;
+    }
+    img {
+        page-break-before: auto;
+        page-break-after: auto;
+        page-break-inside: avoid;
+        position: relative;
+    }
+    .print-show {
+        display: block;
+    }
+    .print-show-h3 {
+        text-transform: uppercase;
+        color: #333333;
+        font-family: 'HelveticaNeueW01-55Medi', Arial, Helvetica, sans-serif;
+        border-bottom: none;
+        display: block;
+        font-size: 14px;
+        padding-bottom: 10px;
+        border-bottom: 1px solid #d3d3d3;
+        position: relative;
+        margin-bottom: 15px;
+    }
+    .tab-color {
+        left: 0;
+        top: 5px;
+    }
+    .frame-finish-wrap {
+        padding-bottom: 0px;
+    }
+    .upholstery-types-list li {
+        margin-bottom: 0;
+    }
+    .essentials-product-img-wrap {
+        text-align: center;
+    }
+    .owl-carousel .owl-stage {
+        width: 100% !important;
+        transform: translate3d(0, 0px, 0px) !important;
+    }
+    .mfp-wrap,
+    .mfp-bg {
+        overflow: scroll !important;
+        position: static !important;
+    }
+    .mCSB_scrollTools {
+        display: none !important;
+    }
+    .upholstery-tetile-list li {
+        margin-bottom: 0px !important;
+    }
+    .frame-list li p,
+    .upholstery-tetile-list li p {
+        margin-bottom: 10px;
+    }
+    .upholstery-tab-content {
+        display: block !important;
+    }
+    .upholstery-tetile-list li,
+    .frame-list li {
+        width: auto !important;
+        padding: 0 10px 0 0;
+    }
+    .swatch-div {
+        width: 0;
+        height: 0;
+    }
+    .upholstery-tetile-list li p,
+    .frame-list li p {
+        position: relative;
+    }
+    .upholstery-tetile-list li p {
+        line-height: normal;
+        margin-bottom: 0;
+    }
+    .upholstery-tetile-list li:last-child p:after,
+    .frame-list li:last-child p:after {
+        display: none;
+    }
+    .upholstery-tetile-list li p:after,
+    .frame-list li p:after {
+        content: ",";
+        position: absolute;
+        right: -5px;
+        top: 0;
+        color: #777;
+    }
+    .upholstery-tetile-list,
+    .frame-list {
+        margin: 3px 0 12px 0;
+    }
+    .tab-main {
+        display: none;
+    }
+    .popup-tab-content h4 {
+        margin-bottom: 15px;
+    }
+    h5.print-show {
+        font-size: 14px;
+        font-family: 'HelveticaNeueW01-75Bold', Arial, Helvetica, sans-serif;
+    }
+    .upholstery-types-list h5.print-show {
+        page-break-inside: avoid;
+        display: block;
+        width: 100%;
     }
 }
