SITEWORK-257: changes for search box (autocomplete, scroll to product)

--- a/resources/public/css/essentials.css
+++ b/resources/public/css/essentials.css
@@ -202,6 +202,8 @@
 .product-list>li {
     float: left;
     width: 25%;
+	padding-top: 120px;
+	margin-top: -120px;
     margin-bottom: 95px;
 }
 
